provision-k8s/bases/neo4j/service.yml
apiVersion: v1
kind: Service
metadata:
  name: neo4j
  labels:
    app: neo4j
spec:
  type: ClusterIP
  selector:
    app: neo4j
  ports:
  - port: 7474
    name: web
  - port: 7687
    name: bolt
