provision-k8s/bases/neo4j/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: neo4j
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header l5d-dst-override $service_name.$namespace.svc.cluster.local:$service_port;
      grpc_set_header l5d-dst-override $service_name.$namespace.svc.cluster.local:$service_port;
spec:
  rules:
  - http:
      paths:
      - path: /browser(/|$)(.*)
        backend:
          serviceName: neo4j
          servicePort: web
      - path: /db(/|$)(.*)
        backend:
          serviceName: neo4j
          servicePort: web
