provision-k8s/bases/neo4j/virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: neo4j
spec:
  hosts:
  - "*"
  gateways:
  - tracegrapher-gateway
  http:
  - match:
    - uri:
        prefix: /browser
    - uri:
        prefix: /db
    route:
    - destination:
        host: neo4j
        port:
          number: 7474
  
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: neo4j
        port:
          number: 7687
